BUG contacts window sits on top of notes forwarding window - set to z-index 99999

--- a/trunk/CO_FILES/css/jquery-ui-1.8.5.custom.css
+++ b/trunk/CO_FILES/css/jquery-ui-1.8.5.custom.css
@@ -445,7 +445,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
  *
  * http://docs.jquery.com/UI/Dialog#theming
  */
-.ui-dialog { position: absolute; padding: 0; width: 300px; overflow: hidden; z-index: 1000;}
+.ui-dialog { position: absolute; padding: 0; width: 300px; overflow: hidden; z-index: 99999;}
 .ui-dialog .ui-dialog-titlebar { height: 25px; position: relative; display: none; }
 .ui-dialog .ui-dialog-title { display: block; padding-top: 4px; } 
 .ui-dialog .ui-dialog-titlebar-close { position: absolute; right: .3em; top: 50%; width: 19px; margin: -10px 0 0 0; padding: 0px; height: 18px; background: transparent; border: 0;}
